--- a/requirements.txt
+++ b/requirements.txt
@@ -21,7 +21,7 @@ keras==2.11.0
 libclang==15.0.6.1
 Markdown==3.4.1
 MarkupSafe==2.1.2
-numpy==1.24.2
+numpy==1.24.0
 oauthlib==3.2.2
 opt-einsum==3.3.0
 packaging==23.0
@@ -37,6 +37,7 @@ tensorboard-data-server==0.6.1
 tensorboard-plugin-wit==1.8.1
 tensorflow==2.11.0
 tensorflow-estimator==2.11.0
+tensorflow-intel==2.11.0
 tensorflow-io-gcs-filesystem==0.30.0
 termcolor==2.2.0
 typing-extensions==4.4.0
